alterado estilo do botao do link de teste de água, e retirando sinal de + do css custom do fvets_pure

--- a/skin/frontend/argento/fvets_pure/less/custom.less
+++ b/skin/frontend/argento/fvets_pure/less/custom.less
@@ -990,30 +990,30 @@ div.default-page-width {
   }
 }
 
-.checkout-onepage-success .col-main .inner .first-row .credit-limit-message, .checkout-onepage-success .col-main .inner .first-row .payment-block-message {
-+  background-color: #d9edf7 !important;
-+  border-radius: .5rem;
-+  color: #31708f;
-+  font-size: 1.3rem;
-+  text-align: center;
-+  strong {
-+    text-transform: uppercase;
-+  }
-+}
-+
-+.bankSlip {
-+  .container {
-+    float:  left;
-+    width: 100%;
-+  }
-+  .bank {
-+    float:  left;
-+    width: 10%;
-+    ~ .bank {
-+      margin-left: 1rem;
-+    }
-+    img {
-+      display: block;
-+    }
-+  }
- }
+.checkout-onepage-success .col-main .inner .first-row .credit-limit-message,
+.checkout-onepage-success .col-main .inner .first-row .payment-block-message {
+    background-color: #d9edf7 !important;
+    border-radius: .5rem;
+    color: #31708f;
+    font-size: 1.3rem;
+    text-align: center;
+    strong {
+      text-transform: uppercase;
+    }
+  }
+  .bankSlip {
+    .container {
+      float:  left;
+        width: 100%;
+    }
+    .bank {
+      float:  left;
+      width: 10%;
+      ~ .bank {
+        margin-left: 1rem;
+      }
+      img {
+        display: block;
+      }
+    }
+  }
